--- a/webpersonal/core/templates/core/about.html
+++ b/webpersonal/core/templates/core/about.html
@@ -3,6 +3,12 @@
 {%block title %}
 Aserca De 
 {% endblock %}
+{% block background %}{% load static %}{% static 'core/img/about-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+        <h1>William Rojo</h1>
+        <span class="subheading">Ingeniero Industrial</span>
+{% endblock %}
 
 {% block content %}
 <h1>Mi Persona</h1>
