--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -3,6 +3,12 @@
 {%block title %}
 Contacto
 {% endblock %}
+{% block background %}{% load static %}{% static 'core/img/contacto.jpg' %}{% endblock %}
+
+{% block headers %}
+        <h1>William Rojo</h1>
+        <span class="subheading">Ingeniero Industrial</span>
+{% endblock %}
 
 {% block content %}
 <h1> Contacto Personal </h1>
