--- a/webpersonal/core/templates/core/portafolio.html
+++ b/webpersonal/core/templates/core/portafolio.html
@@ -4,6 +4,13 @@
 Portafolio
 {% endblock %}
 
+{% block background %}{% load static %}{% static 'core/img/portfolio-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+        <h1>William Rojo</h1>
+        <span class="subheading">Ingeniero Industrial</span>
+{% endblock %}
+
 {% block content %}
 <h1>Trabajos</h1>
                         
