--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -11,11 +11,15 @@ Contacto
 {% endblock %}
 
 {% block content %}
-<h1> Contacto Personal </h1>
-                        
-<h2> Correo para Consultas y Dudas </h2> 
-                        
-<p> Puedes contactarme al correo: <a href="mailto:william.jesus.leo@gmail.com">Contactame</a> </p>
+<div class="col-lg-8 col-md-10 mx-auto">
+          <p>Contacto Personal </p>
+          <p><b>Teléfono:</b> +58 414 6688 764</p>
+          <p> Puedes contactarme tambien al correo: <a href="mailto:william.jesus.leo@gmail.com">Contactame</a> </p>
+           <!--<p>Si quieres ver mi portafolio puedes hacerlo <a href="{% url-->
+          <br>
+          
+        </div>
+<h1>  </h1>             
 {% endblock %}
 
                         
