--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -12,7 +12,5 @@ Portada
 
 
 {% block content %}
-<h2>Portada</h2>
-
-<p>Bienvenido a mi web personal</p>
+<h2>Bienvenido a mi web personal</h2>
 {% endblock %}
