--- a/webpersonal/core/templates/core/about.html
+++ b/webpersonal/core/templates/core/about.html
@@ -11,10 +11,14 @@ Aserca De
 {% endblock %}
 
 {% block content %}
-<h1>Mi Persona</h1>
-                        
-<h2>Acerca de Mi</h2>
-
-<p>Me llamo William y Soy Programador Backend</p>
+<div class="col-lg-3 col-md-4 offset-lg-1">
+<img class="img-fluid avatar" src="{% static 'core/img/yo.jpg' %}" alt="">
+</div>
+<div class="col-lg-7 col-md-8">
+<h2 class="section-heading">Acerca de Mi</h2>
+<h2>Programador Backend</h2>   
+<p>Nacido en Maracaibo, El 21 de agosto de 1994 </p>
+<p>Soy desarrollador con programas como: <br>Python. <br>Django. <br>MySql <br>Postgresql. <br>POO. <br>Metodologia scrum. </p>
+</div>
 {% endblock %}
 
