--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -23,7 +23,7 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">William Rojo</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Inicio</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menú
           <i class="fa fa-bars"></i>
@@ -62,8 +62,13 @@
     </header>
 
     <!-- Contenido  -->
-     {% block content %}{% endblock %}
+    <div class="container">
+      <div class="row">    
+        {% block content %}{% endblock %} 
+      </div>
+    </div>
 
+    {% if request.path != "/"%}<hr> {% endif %}
 
     <!-- Pié de página -->
     <footer>
