--- a/webpersonal/core/templates/core/about.html
+++ b/webpersonal/core/templates/core/about.html
@@ -11,6 +11,7 @@ Aserca De
 {% endblock %}
 
 {% block content %}
+      <div class="row">    
 <div class="col-lg-3 col-md-4 offset-lg-1">
 <img class="img-fluid avatar" src="{% static 'core/img/yo.jpg' %}" alt="">
 </div>
@@ -19,6 +20,7 @@ Aserca De
 <h2>Programador Backend</h2>   
 <p>Nacido en Maracaibo, El 21 de agosto de 1994 </p>
 <p>Soy desarrollador con programas como: <br>Python. <br>Django. <br>MySql <br>Postgresql. <br>POO. <br>Metodologia scrum. </p>
+</div>
 </div>
 {% endblock %}
 
