--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -11,6 +11,7 @@ Contacto
 {% endblock %}
 
 {% block content %}
+<div class="row">    
 <div class="col-lg-8 col-md-10 mx-auto">
           <p>Contacto Personal </p>
           <p><b>Teléfono:</b> +58 414 6688 764</p>
@@ -18,6 +19,7 @@ Contacto
            <!--<p>Si quieres ver mi portafolio puedes hacerlo <a href="{% url-->
           <br>
           
+        </div>
         </div>
 <h1>  </h1>             
 {% endblock %}
