--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -6,11 +6,14 @@ Portada
 {% block background %}{% load static %}{% static 'core/img/industrial.jpg' %}{% endblock %}
 
 {% block headers %}
+
         <h1>William Rojo</h1>
         <span class="subheading">Ingeniero Industrial</span>
 {% endblock %}
 
 
 {% block content %}
-<h2>Bienvenido a mi web personal</h2>
+<div class="row">    
+<h2></h2>
+</div>
 {% endblock %}
