--- a/webpersonal/portfolio/templates/portfolio/portafolio.html
+++ b/webpersonal/portfolio/templates/portfolio/portafolio.html
@@ -12,6 +12,9 @@ Portafolio
 {% endblock %}
 
 {% block content %}
+{{projects}}
+
+
       <div class="row">    
 <div class="row project">  	
 	      	<div class="col-lg-3 col-md-4 offset-lg-1">
