--- a/webpersonal/portfolio/templates/portfolio/portafolio.html
+++ b/webpersonal/portfolio/templates/portfolio/portafolio.html
@@ -12,32 +12,23 @@ Portafolio
 {% endblock %}
 
 {% block content %}
-{{projects}}
-
-
-      <div class="row">    
-<div class="row project">  	
+	{% for project in projects %}
+	    <!-- Proyecto -->
+	    <div class="row project">  	
 	      	<div class="col-lg-3 col-md-4 offset-lg-1">
-			      <img class="img-fluid" src="{% static 'core/img/about-bg.jpg' %}" alt="">
+		        <img class="img-fluid" src="{{project.image.url}}" alt="">
 	      	</div>
 	        <div class="col-lg-7 col-md-8">
-	      		<h2 class="section-heading title">Segundo proyecto</h2>   
-	          <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm....</p>
-	          <p><a href="http://google.com">Más información</a></p>
-	      	</div>
-	      </div>
-	      <!-- Proyecto -->
-	      <div class="row project">  	
-	      	<div class="col-lg-3 col-md-4 offset-lg-1">
-		        <img class="img-fluid" src="{% static 'core/img/home-bg.jpg' %}" alt="">
-	      	</div>
-	        <div class="col-lg-7 col-md-8">
-	      		<h2 class="section-heading title">Primer proyecto</h2>   
-	          <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm....</p>
-	          <p><a href="http://google.com">Más información</a></p>
+	      		<h2 class="section-heading title">{{project.title}}</h2>   
+	          <p>{{project.description}}</p>
+			  {%if project.information %}
+			  <p><a href="{{project.information}}"> Información adicional </a></p>
+			  {% endif %}
+	          <!-- <p><a href="http://google.com">Más información</a></p> -->
 	      	</div>
 	      </div>
 		  </div>
-                </div>
+        </div>
+	{% endfor %}
 {% endblock %}
 
